--- a/app.json
+++ b/app.json
@@ -57,6 +57,7 @@
       "eas": {
         "projectId": "a64ad029-893e-4dc5-8633-a09f0dc07e54"
       }
-    }
+    },
+    "owner": "dev5032"
   }
 }
